@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages.
 
-Changelog for smp_utils-0.96 [20110511] [svn:r86]
+Changelog for smp_utils-0.96 [20110513] [svn:r87]
   - smp_conf_zone_perm_tbl, smp_conf_zone_man_pass
     smp_conf_zone_phy_info, smp_ena_dis_zoning,
     smp_rep_broadcast, smp_rep_phy_event, smp_rep_phy_event_list,
@@ -11,9 +11,11 @@ Changelog for smp_utils-0.96 [20110511] [svn:r86]
     smp_zone_lock, smp_zone_unlock:
       add these new utilities
   - smp_discover_list: SAS-2 fix, add --adn and --summary
+    - show disabled phys with --summary
   - smp_rep_exp_route_tbl: SAS-2 fix
   - smp_rep_general: SAS-2 fix, add --zero option
   - smp_discover: add --adn, --summary and --zero options
+    - show disabled phys with --summary
   - smp_rep_manufacturer, smp_rep_phy_err_log, smp_rep_phy_sata:
     add --zero options
   - smp_conf_general: sync to SAS-2
